@@ -36,7 +36,7 @@ import java.util.*;
    See the License for the specific language governing permissions and
    limitations under the License.
 */
-public class RocketShipProgram extends StdShipProgram
+public class RocketShipProgram extends GenShipProgram
 {
 	public String ID(){	return "RocketShipProgram";}
 	
