@@ -23,6 +23,7 @@
   22. IMPORT now accepts zip files containing *.cmare files.
   23. Say command: if a player speaks same language as person being addressed is speaking, they will try to speak it.  
       Also, untargeted speaking, when only one other person is in the room, will assume to be addressing them. New DISABLE=AUTOLANGUAGE
+  24. (Tech) New TriCorder item (portable computer).  Also, internally, class names and locations are shifting as tech takes shape.
 //TODO: make personal scanner/tricorder systems
 //TODO: make the tech install skill!!!
 //TODO: make components interact badly based on techlevel -- generators/batteries affect things they power, software affects controlled.
